# xhs_downloader

./: .gitignore  PROJECT_DOCUMENTATION.md  README.md  USAGE.md  config.toml  config.toml.example  pyproject.toml  xhs_desktop.spec
.serena/: project.yml
.serena/memories/: done_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
scripts/: build_desktop_exe.py
src/xhs_downloader/: __init__.py  cli.py  config.py
src/xhs_downloader/adapters/: browser.py  downloader.py  storage.py
src/xhs_downloader/application/: __init__.py  services.py
src/xhs_downloader/desktop/: entry.py  models.py  styles.py  window.py  workers.py
src/xhs_downloader/domain/: __init__.py  errors.py  filters.py  models.py
src/xhs_downloader/infra/: __init__.py  logging.py  utils.py
tests/: test_browser_session.py  test_cli.py  test_config.py  test_desktop_window.py  test_filters.py  test_paths.py  test_repository.py  test_services.py
